--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,104 +1,103 @@
 template(name='nav')
-    unless is_frontdesk
-        //- .ui.borderless.attached.big.inverted.menu.topnav
-        .ui.borderless.attached.menu.topnav
-            //- a.toggle_sidebar.icon.item.sidebar_on
-            //-     i.large.sidebar.icon
-            if is_loading
-                .icon.item
-                    i.big.loading.yin.yang.icon
-            else
-                a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                    +i name='home'
-                    //- i.sitemap.large.icon
-                //- a.item(href='/home' class="{{isActivePath '/home'}}")
-                //-     //- i.th.large.icon
-                each bookmarked_models
-                    a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
-                        +i name=icon
-                        //- i.large.icon(class=icon)
-                            |#{title}
-    
-                //- a.icon.item(href='/' class="{{isActivePath '/'}}")
-                //-     +i name='shop'
-                //-     //- i.cart.large.icon
-                //- a.icon.item(href='/users' class="{{isActivePath '/users'}}")
-                //-     +i name='conference-foreground-selected'
-                //-     //- i.users.icon
-                //- a.icon.item(href='/gallery' class="{{isActivePath '/gallery'}}")
-                //-     +i name='gallery'
-                //- a.icon.item(href='/groups' class="{{isActivePath '/groups'}}")
-                //-     +i name='groups'
-                //-     //- i.users.large.icon
+    //- .ui.borderless.attached.big.inverted.menu.topnav
+    .ui.right.aligned.basic.segment
+        //- a.toggle_sidebar.icon.item.sidebar_on
+        //-     i.large.sidebar.icon
+        if is_loading
+            i.big.loading.grey.yin.yang.icon
+        else
+            a.icon.item.set_all(href='/m/all' class="{{isActivePath '/m/all'}}" title='dao')
+                +i name='yin-yang' classes='ui inline mini image'
+            a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+                +i name='home' classes='ui inline mini image'
+                //- i.sitemap.large.icon
+            //- a.item(href='/home' class="{{isActivePath '/home'}}")
+            //-     //- i.th.large.icon
+            //- each bookmarked_models
+            //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
+            //-         +i name=icon
+            //-         //- i.large.icon(class=icon)
+            //-             |#{title}
+
+            //- a.icon.item(href='/' class="{{isActivePath '/'}}")
+            //-     +i name='shop'
+            //-     //- i.cart.large.icon
+            //- a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+            //-     +i name='conference-foreground-selected'
+            //-     //- i.users.icon
+            //- a.icon.item(href='/gallery' class="{{isActivePath '/gallery'}}")
+            //-     +i name='gallery'
+            //- a.icon.item(href='/groups' class="{{isActivePath '/groups'}}")
+            //-     +i name='groups'
+            //-     //- i.users.large.icon
+            //- if is_admin
+            //-     a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}")
+            //-         +i name='shop'
+            //-         //- i.shop.icon
+            //-         //- .mobile.hidden &nbsp; market
+            //- a.icon.item(href='/events' class="{{isActivePath '/events'}}" title='events')
+            //-     +i name='calendar'
+                //- i.calendar.large.icon
+            //- a.icon.item(href='/documents' class="{{isActivePath '/documents'}}" title='documents')
+            //-     +i name='documents'
+            //- a.icon.item(href='/votes' class="{{isActivePath '/votes'}}" title='votes')
+            //-     +i name='elections'
+            //- a.icon.item(href='/qa' class="{{isActivePath '/qa'}}" title='qa')
+            //-     +i name='faq'
+            //- a.icon.item(href='/videos' class="{{isActivePath '/videos'}}" title='video')
+            //-     +i name='video'
+            
+            //- a.icon.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='food')
+            //-     +i name='food'
+            //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
+            //-     +i name='shop'
+        if currentUser
+            //- .item
+            //-     .ui.header(title='your karma') #{currentUser.karma}
+            unless logging_out
+                //- a.ui.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActiveRoute regex='notifications'}}")
+                //-     i.large.alarm.icon
+                    //- .menu
+                    //-     if notifications
+                    //-         each notifications
+                    //-             .ui.button #{text}
+                    //-     else 
+                    //-         |no notifications
+                if is_user
+                    //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                    //-     +i name='new-post'
+                    //-     //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                    //- a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
+                    //-     +i name='chat'
+                        //- i.chat.large.icon
+                    //- a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
+                    //-      +i name='wallet'
+                    //-      |#{currentUser.credit}
+                    //- a.icon.item.new_item(href="#")
+                    //-     i.circular.plus.icon
+                    //- a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
+                    //-     |#{cart_amount}
                 //- if is_admin
-                //-     a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}")
-                //-         +i name='shop'
-                //-         //- i.shop.icon
-                //-         //- .mobile.hidden &nbsp; market
-                //- a.icon.item(href='/events' class="{{isActivePath '/events'}}" title='events')
-                //-     +i name='calendar'
-                    //- i.calendar.large.icon
-                //- a.icon.item(href='/documents' class="{{isActivePath '/documents'}}" title='documents')
-                //-     +i name='documents'
-                //- a.icon.item(href='/votes' class="{{isActivePath '/votes'}}" title='votes')
-                //-     +i name='elections'
-                //- a.icon.item(href='/qa' class="{{isActivePath '/qa'}}" title='qa')
-                //-     +i name='faq'
-                //- a.icon.item(href='/videos' class="{{isActivePath '/videos'}}" title='video')
-                //-     +i name='video'
-                
-                //- a.icon.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='food')
-                //-     +i name='food'
-                //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
-                //-     +i name='shop'
-            .right.menu
-                if currentUser
-                    //- .item
-                    //-     .ui.header(title='your karma') #{currentUser.karma}
-                    unless logging_out
-                        //- a.ui.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActiveRoute regex='notifications'}}")
-                        //-     i.large.alarm.icon
-                            //- .menu
-                            //-     if notifications
-                            //-         each notifications
-                            //-             .ui.button #{text}
-                            //-     else 
-                            //-         |no notifications
-                        if is_user
-                            //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                            //-     +i name='new-post'
-                            //-     //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
-                                +i name='chat'
-                                //- i.chat.large.icon
-                            //- a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
-                            //-      +i name='wallet'
-                            //-      |#{currentUser.credit}
-                            //- a.icon.item.new_item(href="#")
-                            //-     i.circular.plus.icon
-                            //- a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
-                            //-     |#{cart_amount}
-                        //- if is_admin
-                        //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
-                        //-         +i name='user shield'
-                        //-         //- i.user.shield.icon
-                        a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
-                            if currentUser.image_id
-                                img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
-                            else
-                                +i name='user'
-                                //- i.user.icon
-                                | #{currentUser.username}
-                    if logging_out
-                        .item
-                            i.large.loading.circle.notch.icon
+                //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
+                //-         +i name='user shield'
+                //-         //- i.user.shield.icon
+                a(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
+                    //- if currentUser.image_id
+                    //-     img.ui.inline.circular.tiny.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
                     //- else
-                    //-     a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                    //-         i.sign.out.large.icon
-                else
-                    a.item(href='/login' title='login') 
-                        //- i.sign.in.large.icon
-                        +i name='enter-2' classes='ui avatar image'
+                    +i name='user' classes='ui inline mini image'
+                    //- i.user.icon
+                    | #{currentUser.username}
+            if logging_out
+                .item
+                    i.large.loading.circle.notch.icon
+            //- else
+            //-     a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
+            //-         i.sign.out.large.icon
+        else
+            a.item(href='/login' title='login') 
+                //- i.sign.in.large.icon
+                +i name='enter-2' classes='ui avatar image'
 
 
 
