--- a/client/styles.css
+++ b/client/styles.css
@@ -2,9 +2,9 @@ body {
     /* font-family: 'Ubuntu', sans-serif !important; */
     font-size: 110% !important;
     /*line-height: 200% !important;*/
-    /* filter: invert(100%) !important; */
-    /*background: #3d3d3d !important;*/
-    /* background: rgba(0, 0, 0, .8) !important */
+    filter: invert(100%) !important;
+    /* background: #3d3d3d !important; */
+    background: rgba(0, 0, 0, .8) !important
 }
 
 .invert {
@@ -289,7 +289,7 @@ a {
 .scrolling{
 	overflow-y:scroll;
 	overflow-x:hidden;
-	max-height:90vh;
+	max-height:95vh;
 	/*max-height:85vh;*/
 	/* padding-top: 1em; */
 	/*padding-left: 1em;*/
